# directory-structure-viewer-python

./: LICENSE  README.md  install.sh  pyproject.toml  update.sh
docs/: DEV_SETUP.md  PRODUCTION_SETUP.md  SPECS_V1.0.md  WORKLOG_V1.0.1.md  WORKLOG_V1.0.2.md
src/dsviewer/: __main__.py  api.py  auth.py  block_helpers.py  cli.py  config.py  file_processor.py  js_helper.py  markdown_helper.py  php_helper.py  server.py  simplified_content.py  utils.py
src/dsviewer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dsviewer/scripts/: change_password.py  create_user.py
src/dsviewer/static/: index.html
tests/: test_auth.py  test_block_helpers.py  test_file_processor.py  test_js_helper.py  test_markdown_helper.py  test_php_helper.py  test_simplified_content.py
tests/fixtures/: sample.js  sample.md  sample.php  sample.vue
